--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ docopt==0.6.2
 executing==2.2.0
 fastjsonschema==2.21.1
 Flask==3.1.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.2
 idna==3.10
 ipython==8.12.3
 itsdangerous==2.2.0
@@ -37,6 +39,7 @@ pickleshare==0.7.5
 pipreqs==0.5.0
 platformdirs==4.3.8
 prompt_toolkit==3.0.51
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.1
@@ -47,6 +50,7 @@ requests==2.32.3
 rpds-py==0.25.1
 six==1.17.0
 soupsieve==2.7
+SQLAlchemy==2.0.41
 stack-data==0.6.3
 tinycss2==1.4.0
 tornado==6.5
